// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebViewShared exports defaultOriginWhitelist 1`] = `
Array [
  "http://*",
  "https://*",
]
`;

exports[`WebViewShared exports defaultDeeplinkWhitelist 1`] = `
Array [
  "https://*",
]
`;